Fixed Text Alignment on Index Page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,10 +91,10 @@ li a:hover,
   margin: 0;
   padding-top: 40px;
   padding-left: 50px;
-  position: relative;
+  /*position: relative;*/
   left: 80px;
   top: 2px;
-  /*text-align: center;*/
+  text-align: center;
   font-size: 64px;
   font-style: normal;
   font-weight: 700;
